import * as React from 'react';
import { describe, it, expect } from 'vitest';
import { render, screen } from '@testing-library/react';
import { Separator } from './Separator';

describe('Separator', () => {
  it('renders with default props', () => {
    render(<Separator data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toBeInTheDocument();
  });

  it('renders as decorative by default', () => {
    render(<Separator data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveAttribute('role', 'none');
    expect(separator).not.toHaveAttribute('aria-orientation');
  });

  it('renders with semantic role when not decorative', () => {
    render(<Separator decorative={false} data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveAttribute('role', 'separator');
    expect(separator).toHaveAttribute('aria-orientation', 'horizontal');
  });

  it('renders horizontal orientation by default', () => {
    render(<Separator data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveClass('h-[1px]', 'w-full');
  });

  it('renders vertical orientation', () => {
    render(<Separator orientation="vertical" data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveClass('h-full', 'w-[1px]');
  });

  it('applies custom className', () => {
    render(<Separator className="my-4" data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveClass('my-4');
  });

  it('forwards ref correctly', () => {
    const ref = React.createRef<HTMLDivElement>();
    render(<Separator ref={ref} />);
    expect(ref.current).toBeInstanceOf(HTMLDivElement);
  });

  it('applies border background color', () => {
    render(<Separator data-testid="separator" />);
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveClass('bg-border');
  });

  it('sets aria-orientation for vertical non-decorative separator', () => {
    render(
      <Separator
        orientation="vertical"
        decorative={false}
        data-testid="separator"
      />
    );
    const separator = screen.getByTestId('separator');
    expect(separator).toHaveAttribute('aria-orientation', 'vertical');
  });

  describe('snapshots', () => {
    it('matches snapshot for horizontal decorative separator', () => {
      const { container } = render(<Separator />);
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches snapshot for vertical decorative separator', () => {
      const { container } = render(<Separator orientation="vertical" />);
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches snapshot for horizontal semantic separator', () => {
      const { container } = render(<Separator decorative={false} />);
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches snapshot for vertical semantic separator', () => {
      const { container } = render(
        <Separator orientation="vertical" decorative={false} />
      );
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches snapshot with custom className', () => {
      const { container } = render(<Separator className="my-4" />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });
});
